Actions
Bug #14809
closedcalc_lineno() returns wrong location
Bug #14809:
calc_lineno() returns wrong location
Description
Actions
Added by ktsj (Kazuki Tsujimoto) over 8 years ago. Updated over 8 years ago.
Description
I'll take care of it.
Applied in changeset trunk|r63763.
give up insn attr handles_frame
I introduced this mechanism in r62051 to speed things up. Later it
was reported that the change causes problems. I searched for
workarounds but nothing seemed appropriate. I hereby officially
give it up. The idea to move ADD_PC around was a mistake.
Fixes [Bug #14809] and [Bug #14834].
Signed-off-by: Urabe, Shyouhei shyouhei@ruby-lang.org